--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
         login-server: ${{ env.ACR_RESOURCE_URI }}
         username: ${{ secrets.ACR_USER }}  
         password: ${{ secrets.ACR_PASSWORD }}
+        
+    - name: Debug - Print Start of AZURE_CREDENTIALS
+      run: echo "${{ secrets.AZURE_CREDENTIALS }}" | head -c 30
 
     - name: 📃 Set AKS context
       uses: azure/aks-set-context@v1
